SERVER-5441 make replSetGetStatus with forShell not change getLastError in mongos